--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thị Trấn eSchool - Nâng Cấp</title>
+    <title>Thị Trấn eSchool</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script src="https://unpkg.com/function-plot/dist/function-plot.js"></script>
@@ -32,16 +32,24 @@
             <h1 class="map-title">Bản Đồ Thị Trấn</h1>
             <div class="map-grid">
                 <div class="zone math-town" onclick="enterZone('math')">
-                    <i class="fas fa-calculator"></i> <h3>Math Town</h3> <p>Khu Toán Học</p>
+                    <i class="fas fa-calculator"></i>
+                    <h3>Math Town</h3>
+                    <p>Khu Toán Học</p>
                 </div>
                 <div class="zone lit-house" onclick="enterZone('literature')">
-                    <i class="fas fa-book-open"></i> <h3>Literature House</h3> <p>Khu Văn Học</p>
+                    <i class="fas fa-book-open"></i>
+                    <h3>Literature House</h3>
+                    <p>Khu Văn Học</p>
                 </div>
                 <div class="zone english-spot" onclick="enterZone('english')">
-                    <i class="fas fa-language"></i> <h3>English Spot</h3> <p>Khu Anh Ngữ</p>
+                    <i class="fas fa-language"></i>
+                    <h3>English Spot</h3>
+                    <p>Khu Anh Ngữ</p>
                 </div>
                 <div class="zone square" onclick="enterZone('square')">
-                    <i class="fas fa-users"></i> <h3>Academic Square</h3> <p>Quảng Trường</p>
+                    <i class="fas fa-users"></i>
+                    <h3>Academic Square</h3>
+                    <p>Quảng Trường</p>
                 </div>
             </div>
         </main>
