--- a/index.html
+++ b/index.html
@@ -3,28 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thị Trấn eSchool</title>
+    <title>Thị Trấn eSchool - Bản Nâng Cấp</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script src="https://unpkg.com/function-plot/dist/function-plot.js"></script>
 </head>
 <body>
 
-    <div id="login-overlay" class="overlay">
-        <div class="login-box">
-            <h2>Chào mừng đến Thị trấn eSchool</h2>
-            <p>Vui lòng chọn vai trò:</p>
-            <button onclick="login('student')" class="btn-role student">🧑‍🎓 Công dân Học sinh</button>
-            <button onclick="login('teacher')" class="btn-role teacher">👩‍🏫 Cố vấn Giáo viên</button>
+    <div id="auth-overlay" class="overlay">
+        <div class="auth-box">
+            <h2 style="color: #4CAF50;">🔐 Cổng vào Thị Trấn</h2>
+            
+            <div class="auth-tabs">
+                <button onclick="switchAuthMode('login')" id="tab-login" class="active">Đăng Nhập</button>
+                <button onclick="switchAuthMode('register')" id="tab-register">Đăng Ký</button>
+            </div>
+
+            <div id="form-login">
+                <input type="text" id="login-username" placeholder="Tên đăng nhập">
+                <input type="password" id="login-password" placeholder="Mật khẩu">
+                <button onclick="handleLogin()" class="btn-submit">Vào Thị Trấn</button>
+            </div>
+
+            <div id="form-register" class="hidden">
+                <p>Bạn là ai?</p>
+                <div class="role-select">
+                    <label><input type="radio" name="reg-role" value="student" checked onclick="toggleEmailField(false)"> 🧑‍🎓 Học sinh</label>
+                    <label><input type="radio" name="reg-role" value="teacher" onclick="toggleEmailField(true)"> 👩‍🏫 Giáo viên</label>
+                </div>
+                <input type="text" id="reg-username" placeholder="Tên đăng nhập mới">
+                <input type="password" id="reg-password" placeholder="Mật khẩu mới">
+                <input type="email" id="reg-email" placeholder="Email (Bắt buộc cho GV)" class="hidden">
+                <button onclick="handleRegister()" class="btn-submit" style="background: #FF9800;">Tạo Tài Khoản</button>
+            </div>
+            <p id="auth-msg"></p>
         </div>
     </div>
 
-    <div id="app-container" style="display: none;">
+    <div id="app-container" class="hidden">
         <header>
             <div class="logo">🏘️ Thị Trấn eSchool</div>
-            <div class="user-info">
-                <span id="user-greeting">Xin chào!</span>
-                <button onclick="logout()" class="btn-logout">Đăng xuất</button>
+            <div class="user-panel">
+                <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" id="user-avatar" alt="Avatar">
+                <div class="user-details">
+                    <span id="display-name">Guest</span>
+                    <span id="user-badge" class="badge">Role</span>
+                </div>
+                <button onclick="logout()" class="btn-logout"><i class="fas fa-sign-out-alt"></i></button>
             </div>
         </header>
 
@@ -32,33 +57,29 @@
             <h1 class="map-title">Bản Đồ Thị Trấn</h1>
             <div class="map-grid">
                 <div class="zone math-town" onclick="enterZone('math')">
-                    <i class="fas fa-calculator"></i>
-                    <h3>Math Town</h3>
-                    <p>Khu Toán Học</p>
+                    <i class="fas fa-calculator"></i> <h3>Math Town</h3> <p>Khu Toán Học</p>
                 </div>
                 <div class="zone lit-house" onclick="enterZone('literature')">
-                    <i class="fas fa-book-open"></i>
-                    <h3>Literature House</h3>
-                    <p>Khu Văn Học</p>
+                    <i class="fas fa-feather-alt"></i> <h3>Literature House</h3> <p>Khu Văn Học</p>
                 </div>
                 <div class="zone english-spot" onclick="enterZone('english')">
-                    <i class="fas fa-language"></i>
-                    <h3>English Spot</h3>
-                    <p>Khu Anh Ngữ</p>
+                    <i class="fas fa-language"></i> <h3>English Spot</h3> <p>Khu Anh Ngữ</p>
                 </div>
                 <div class="zone square" onclick="enterZone('square')">
-                    <i class="fas fa-users"></i>
-                    <h3>Academic Square</h3>
-                    <p>Quảng Trường</p>
+                    <i class="fas fa-comments"></i> <h3>Academic Square</h3> <p>Quảng Trường (Chat)</p>
                 </div>
             </div>
         </main>
 
         <section id="zone-content" class="hidden">
-            <button onclick="goBack()" class="btn-back">⬅ Quay lại bản đồ</button>
-            <h2 id="zone-title">Tiêu đề khu vực</h2>
+            <div class="zone-header">
+                <button onclick="goBack()" class="btn-back">⬅ Trở về</button>
+                <h2 id="zone-title">Tiêu đề</h2>
+            </div>
             
-            <div id="tool-container" class="interactive-area">
+            <div id="sub-menu" class="sub-menu-bar"></div>
+
+            <div id="workspace" class="workspace-box">
                 </div>
         </section>
     </div>
